February 15 2010    H.S    <HelderSepu@gmail.com>
    * 0.6.3.0 - At revision: 741
    * Fix bug loading KML files (Issue 124)

January 30 2010    H.S    <HelderSepu@gmail.com>
    * 0.6.2.0 - At revision: 717
    * Add (Key + Click) functionality (Issue 123)
      - Ctrl + Click = Add Marker
      - Alt + 2Click = Zoom Out

January 8 2010    H.S    <HelderSepu@gmail.com>
    * 0.6.1.0 - At revision: 670
    * Fix bug Importing markers from KML files (Issue 65)

January 5 2010    H.S    <HelderSepu@gmail.com>
    * 0.6.0.0 - At revision: 662
    * Use Google's new URL pattern (Issue 112)
    * Add support for VirtualEarth (Issue 114)
    * Import markers from KML files (Issue 65)
    * Add a "Add Marker" to the right Click menu (Issue 65)

November 21 2009    H.S    <HelderSepu@gmail.com>
    * 0.5.0.0 - At revision: 622
    * Fix download of big areas (Issue 100)
    * Keep selected location visible (Issue 102)
    * Improve look in Ubuntu 9.10 (Issue 108)

October 30 2009    H.S    <HelderSepu@gmail.com>
    * 0.4.0.0 - At revision: 592
    * Add more map services (Issue 82)
    * Fix bug in the Path to images (Issue 95)
    * Apply changes to the markers immediately (Issue 97)

October 11 2009    H.S    <HelderSepu@gmail.com>
    * 0.3.0.0 - At revision: 568
    * Add an Update notifier (Issue 51)
    * Add option to ReCenter GPS cursor (Issue 87)
    * Fix a Force Update bug (Issue 88)
    * Add a new pattern for Google maps (Issue 94)

September 22 2009    H.S    <HelderSepu@gmail.com>
    * 0.2.1.0 - At revision: 549
    * Add a new googleMaps pattern (Issue 84)

August 25 2009    H.S    <HelderSepu@gmail.com>
    * 0.2.0.0 - At revision: 530
    * Complete GPS support (Issue 32)
    * Add updated notifications (Issue 51)
    * Add a couple of GPS features (Issue 68, 70)
    * Fix multiple GPS issues (Issues 66, 67, 69)
    * Fix Regresion that broke the "Force update" (Issue 73)
    * Fix bug zooming using the menu (Issue 76)
