@@ -10,7 +10,7 @@ import src.mapPixbuf as mapPixbuf
 
 from src.mapConst import *
 from src.gtkThread import *
-from src.mapConf import MapConf
+from src.mapConf import MapConfFactory
 from src.mapMark import MyMarkers
 from src.DLWindow import DLWindow
 from src.mapUpdate import CheckForUpdates
@@ -255,20 +255,19 @@ class MainWindow(gtk.Window):
         self.cb_forceupdate.set_active(False)
         hbox.pack_start(self.cb_forceupdate)
 
-        bbox = gtk.HButtonBox()
         if mapGPS.available:
             cmb_gps = gtk.combo_box_new_text()
             for w in GPS_NAMES:
                 cmb_gps.append_text(w)
             cmb_gps.set_active(self.conf.gps_mode)
             cmb_gps.connect('changed',self.gps_changed)
-            bbox.add(cmb_gps)
+            hbox.add(cmb_gps)
 
-        bbox.set_layout(gtk.BUTTONBOX_SPREAD)
+
         gtk.stock_add([(gtk.STOCK_HARDDISK, "_Download", 0, 0, "")])
         button = gtk.Button(stock=gtk.STOCK_HARDDISK)
         button.connect('clicked', self.download_clicked)
-        bbox.add(button)
+	hbox.add(button)
 
         cmb_layer = gtk.combo_box_new_text()
         for kw, kv in MAP_SERVICES.iteritems():
@@ -277,9 +276,8 @@ class MainWindow(gtk.Window):
         cmb_layer.set_active(FIRST_LAYER_ID)
         cmb_layer.connect('changed',self.layer_changed)
         self.cmb_layer = cmb_layer
-        bbox.add(cmb_layer)
+	hbox.add(cmb_layer)
 
-        hbox.pack_start(bbox)
         return hbox
 
     def __create_top_paned(self):
@@ -643,7 +641,7 @@ class MainWindow(gtk.Window):
             )
 
     def __init__(self, parent=None):
-        self.conf = MapConf()
+        self.conf = MapConfFactory.get_conf()
         self.crossPixbuf = mapPixbuf.cross()
         self.marker = MyMarkers(self.conf.init_path)
         self.ctx_map = MapServ(self.conf.init_path, self.conf.repository_type)
